--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "interview",
   "scripts": {
-    "test": "none"
+    "test": "jest --passWithNoTests --verbose false"
   },
   "repository": {
     "type": "git",
@@ -9,9 +9,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.7.0",
+    "@types/jest": "^27.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "eslint": "^7.32.0",
     "esno": "^0.8.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   }
 }
